change swap label

--- a/ks.cfg
+++ b/ks.cfg
@@ -61,4 +61,4 @@ vim
 %post
 e2label /dev/sda1 /
 e2label /dev/vg_data/lv_home /home
-swaplabel -L ksswap /dev/vg_data/lv_swap
+swaplabel -L lvmswap /dev/vg_data/lv_swap
